--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://user:password@localhost:5432/chat
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@db:5432/chat
 
 
 [post_write_hooks]
