--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic-settings = "^2.8.1"
 bcrypt = "3.2.2"
 pyjwt = "^2.10.1"  # Исправлено с jwt на pyjwt
 aiobotocore = "^2.21.1"
+python-multipart = "^0.0.20"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
